test-nginx/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-hello-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: "acbb7d4819021471b9a9ee0b8a95791b-1760438959.eu-west-2.elb.amazonaws.com"
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: nodejs-hello-service
                port:
                  number: 8080
